--- a/frontend/SocialNITT/src/components/body/home/home.css
+++ b/frontend/SocialNITT/src/components/body/home/home.css
@@ -26,21 +26,26 @@
     margin-top: 1rem;
   }
   .hero-dark-container .hero-dark .hero-details h1 {
-    color: #EE6983;
+    color: #850E35;
     font-weight: 700;
     font-size: 2.25rem;
     line-height: 2.5rem;
+    
   }
   .hero-dark-container .hero-dark .hero-details h1 span {
-    color: #850E35;
+    color: #EE6983;
+    font-size: 1.5rem;
+    line-height: 0;
+    margin-bottom: 0;
   }
   @media (min-width: 1280px) {
     .hero-dark-container .hero-dark .hero-details h1 {
-      font-size: 3rem;
-      line-height: 1;
+      font-size: 2rem;
+      
     }
   }
   .hero-dark-container .hero-dark .hero-details p {
+    margin-top: 0;
     color: #1e1e1e;
     max-width: 36rem;
     line-height: 1.625;
@@ -230,4 +235,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.hero-details .Quote{
+  font-size: .5rem;
 }
