--- a/frontend/SocialNITT/src/components/header/header.css
+++ b/frontend/SocialNITT/src/components/header/header.css
@@ -11,13 +11,26 @@ header{
 header .logo {
     display: flex;
     font-size: 13px;
+    position: relative;
+    left: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 header .logo h1{
-    margin-left: 10px;
+    margin-left: 1rem;
+    font-size: 2rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 header .logo img{
-    max-width: 35px;
-    max-height: 35px;
+    max-width: 3.5rem;
+    max-height: 3.5rem;
+    border-radius: .5rem;
+
 }
 header a{
     color: white;
