--- a/frontend/SocialNITT/src/components/body/hero/hero.css
+++ b/frontend/SocialNITT/src/components/body/hero/hero.css
@@ -1,10 +1,4 @@
-.see-more{
-  background-color:  #850E35; 
-    border-radius: 5px;
-    height: 30px;
-}
-
-.card-container {
+ .card-container {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -88,7 +82,7 @@
     white-space: pre-line;
   }
   
-  .see-more {
+  .cta-btn {
     background: none;
     border: none;
     color: #8A1538;
