--- a/frontend/SocialNITT/src/components/header/header.css
+++ b/frontend/SocialNITT/src/components/header/header.css
@@ -1,14 +1,13 @@
 header {
   width: 100%;
-  min-height: 4rem;
+  min-height: 4.5rem;
   background: #850E35;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
-  padding: 0 30px;
-  position: relative;
-}
+   padding: 0 30px;
+   position: fixed;
+  }
 
 header .logo {
   display: flex;
