--- a/frontend/SocialNITT/src/components/cards/ProductCard.css
+++ b/frontend/SocialNITT/src/components/cards/ProductCard.css
@@ -71,6 +71,7 @@
     font-weight: 700;
     color: #8A1538;
     margin: 0px;
+    
     text-transform: capitalize;
 }
 
@@ -80,13 +81,16 @@
     line-height: 1.3;
     text-align: left;
     margin-top: 4px;
+    margin-bottom: 1rem;
     font-style: normal;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    min-height: calc(1.3em * 3); 
 }
+ 
 
 .card-price-date {
     display: flex;
@@ -98,19 +102,96 @@
     margin-top: 4px;
 }
 
-.card-button {
+
+.edit-delete-card-action{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+
+}
+  
+  .card-edit,
+  .card-delete {
+          /* Same maroon as Archive button */
+    color: black;                      /* White text */
+    margin: auto;
+    padding: 8px 16px;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease, transform 0.2s ease;
+  
+  
+     
+ 
+  }
+  .edit-delete-card-action .card-edit{
+    text-align: center;
+
+  }
+  
+  /* Specific hover colors */
+  .card-edit:hover {
+    background-color: #6a0f2e;
+    transform: scale(1.05);
+  }
+  
+   
+  
+  .card-delete:hover {
+    background-color: #a71d2a;
+    transform: scale(1.05);
+  }
+  
+  
+ 
+  .card-button {
     margin-top: 10px;
     background-color: #8A1538;
     color: white;
+    width:80%;
     padding: 9px;
     font-size: 13px;
     font-weight: 600;
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    transition: background 0.2s ease;
-}
-
-.card-button:hover {
+    transition: all 0.2s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  }
+  
+  .card-button:hover {
     background-color: #6a0f2e;
-}
+    transform:   scaleX(1.05);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+  }
+  .card-action{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+ 
+  }
+  .archive-card-button {
+    margin-bottom: 10px;
+    background-color: #8A1538;
+    color: white;
+    width:80%;
+    padding: 9px;
+    font-size: 13px;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  }
+  
+  .archive-card-button:hover {
+    background-color: #6a0f2e;
+    transform:   scaleX(1.05);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+  }
+ 
