scroll bar in hero

--- a/frontend/SocialNITT/src/components/body/dashboard/dashboard.css
+++ b/frontend/SocialNITT/src/components/body/dashboard/dashboard.css
@@ -233,19 +233,18 @@
 .cards-primary .card-container {
   margin-top: 1rem;
   display: grid;
-  gap: 0.5rem;
+   
   padding-bottom: 50px;
 }
 
 @media (min-width: 640px) {
-  .cards-primary .card-container {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
+  
 }
 
 @media (min-width: 1024px) {
   .cards-primary .card-container {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+   display: flex;
+   flex-wrap: wrap;
   }
 }
 
