--- a/frontend/SocialNITT/src/components/cards/ProductCard.css
+++ b/frontend/SocialNITT/src/components/cards/ProductCard.css
@@ -149,7 +149,7 @@
   
  
   .card-button {
-    margin-top: 10px;
+    margin-bottom: 15px;
     background-color: #8A1538;
     color: white;
     width:80%;
@@ -195,3 +195,6 @@
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
   }
  
+
+
+   
