--- a/frontend/SocialNITT/src/components/body/auth/auth.css
+++ b/frontend/SocialNITT/src/components/body/auth/auth.css
@@ -12,7 +12,7 @@
 }
 .login_page h2{
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size:  1.2em;
     margin: 20px 0;
     letter-spacing: 1.5px;
 }
