--- a/frontend/SocialNITT/src/components/header/header.css
+++ b/frontend/SocialNITT/src/components/header/header.css
@@ -7,6 +7,7 @@ header {
   align-items: center;
    padding: 0 30px;
    position: fixed;
+   box-shadow: 0 6px 20px rgba(133, 14, 53, 0.3);
   }
 
 header .logo {
