--- a/frontend/SocialNITT/src/components/body/admin/adminDashboard.css
+++ b/frontend/SocialNITT/src/components/body/admin/adminDashboard.css
@@ -365,7 +365,7 @@
   }
   
   .card-price-date {
-    flex-direction: column;
+    flex-direction: row;
     gap: 0.5rem;
     text-align: center;
   }
